--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="row mt-4">
       <div class="col">
         <h3 class="display-4 text-center">Visión</h3>
-        <p>
+        <p class="text-justify">
           La Cooperativa "<strong>COOMUTRANSTUR</strong>" se consolidará como una empresa del sector de economía
           solidaria, que provea a
           los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
@@ -119,7 +119,7 @@
       </div>
       <div class="col">
         <h3 class="display-4 text-center">Misión</h3>
-        <p>
+        <p class="text-justify">
           Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus familias
           promoviendo
           el ahorro con base en el aporte, otorgando créditos, fomentando la ayuda mutua, el compañerismo y el
@@ -142,8 +142,8 @@
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
       </div>
       <div class="w-100 mt-4"></div>
-      <div class="col-sm-6 col-md-4 col-xl-4">
-        <img src="holder.js/200x240/" alt="">
+      <div class="d-sm-none col-sm-6 col-md-4 col-xl-4">
+        <img src="img/checklist.png" alt="">
       </div>
       <div class="col-sm-6 col-md-4 col-xl-4">
         <h5>Valores corporativos:</h5>
