--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
     <div class="row mt-4 align-items-center">
       <div class="col-sm-12 col-md-5 col-xl-4 text-center">
-        <img id="logo" class="card-img-top" src="img/logo.jpg" alt="logo Coomutranstur">
+        <img id="logo" class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
       </div>
       <div class="col-sm-12 col-md-7 col-xl-8">
         <p>Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
@@ -143,7 +143,7 @@
       </div>
       <div class="w-100 mt-4"></div>
       <div class="d-sm-none col-sm-6 col-md-4 col-xl-4">
-        <img src="img/checklist.png" alt="">
+        <img src="img/checklist.png" alt="" class="img-fluid">
       </div>
       <div class="col-sm-6 col-md-4 col-xl-4">
         <h5>Valores corporativos:</h5>
