--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     </div>
     <div class="row mt-4 align-items-center">
       <div class="col-sm-12 col-md-5 col-xl-4 text-center">
-        <img id="logo" class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
+        <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
       </div>
       <div class="col-sm-12 col-md-7 col-xl-8">
-        <p>Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
+        <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
           solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
           Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
           comunidad
