--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
       <div class="col-sm-6 col-md-4 col-xl-4">
         <h5>Valores corporativos:</h5>
-        <ul>
+        <ul class="list-unstyled">
           <li>Ayuda mutua</li>
           <li>Responsabilidad</li>
           <li>Honestidad </li>
@@ -200,7 +200,7 @@
             <!-- Correo: -->
             <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
             <div class="media-body">
-              coomutranstur@hotmail.com
+              www.coomutranstur@hotmail.com
             </div>
           </div>
         </div>
