--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="col">
         <h3 class="display-4 text-center">Visión</h3>
         <p class="text-justify">
-          La Cooperativa "<strong>COOMUTRANSTUR</strong>" se consolidará como una empresa del sector de economía
+          La Cooperativa "<strong><em>COOMUTRANSTUR</em></strong>" se consolidará como una empresa del sector de economía
           solidaria, que provea a
           los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
           construcción del capital social en Colombia.
@@ -137,15 +137,15 @@
       </div>
     </div>
     <div class="row justify-content-around mt-4">
-      <div class="col-9 text-center">
-        <p>Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
+      <div class="col-10 text-center">
+        <p class="">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
       </div>
       <div class="w-100 mt-4"></div>
       <div class="d-sm-none col-sm-6 col-md-4 col-xl-4">
         <img src="img/checklist.png" alt="" class="img-fluid">
       </div>
-      <div class="col-sm-6 col-md-4 col-xl-4">
+      <div class="col-sm-6 col-md-4 col-xl-4 text-center">
         <h5>Valores corporativos:</h5>
         <ul class="list-unstyled">
           <li>Ayuda mutua</li>
@@ -221,7 +221,7 @@
         COOPERATIVA MULTIATIVA DE TRANSPORTE TURISTICO EN EL
         CORREGIMIENTO DE CORDOBA Y SAN CIPRIANO
       </p>
-      <p><em id="nit">NIT: 830.500.789-9</em></p>
+      <p><em>NIT: 830.500.789-9</em></p>
 
     </div>
 
