--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="col">
         <h3 class="display-4 text-center">Visión</h3>
         <p class="text-justify">
-          La Cooperativa "<strong><em>COOMUTRANSTUR</em></strong>" se consolidará como una empresa del sector de economía
+          La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del sector de economía
           solidaria, que provea a
           los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
           construcción del capital social en Colombia.
