--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#politica">Política de Calidad</a>
+                  <a class="nav-link" href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#nosotros">Nosotros</a>
+                    <a class="nav-link" href="#politica">Política de Calidad</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#ubicacion">Ubicación</a>
@@ -66,7 +66,7 @@
                   <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contáctenos</a>
+                  <a class="nav-link" href="#footer">Contáctenos</a>
                 </li>
               </ul>
             </div>
