--- a/index.html
+++ b/index.html
@@ -142,11 +142,8 @@
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
       </div>
       <div class="w-100 mt-4"></div>
-      <div class="d-sm-none col-sm-6 col-md-4 col-xl-4">
-        <img src="img/checklist.png" alt="" class="img-fluid">
-      </div>
       <div class="col-sm-6 col-md-4 col-xl-4 text-center">
-        <h5>Valores corporativos:</h5>
+        <h5 class="bg-light pb-3 pt-3">Valores corporativos</h5>
         <ul class="list-unstyled">
           <li>Ayuda mutua</li>
           <li>Responsabilidad</li>
