--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <section id="footer" class="mt-4">
     <div class="container justify-content-around text-center mb-4">
       <div class="row">
-        <div class="col-sm-3 col-md-6">
+        <div class="col-sm-3 col-md-6 col-lg-4">
           <div class="media">
             <!-- Telefonos: -->
             <i class="fas fa-phone-square fa-3x align-self-center mr-1"></i>
@@ -192,7 +192,7 @@
           </div>
         </div>
 
-        <div class="col-sm-3 col-md-6 align-self-center">
+        <div class="col-sm-3 col-md-6 col-lg-4 align-self-center">
           <div class="media d-flex align-items-center">
             <!-- Correo: -->
             <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
@@ -203,7 +203,7 @@
         </div>
 
         <!-- <div class="w-100"></div> -->
-        <div class="col-sm-6 col-md-12">
+        <div class="col-sm-6 col-md-12 col-lg-4">
           <span style="font-size: 3em;">
             <a href="https://www.facebook.com/coomutranstur/"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/coomutranstur/"><i class="fab fa-instagram"></i></a>
