--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <a class="nav-link" href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#politica">Política de Calidad</a>
+                  <a class="nav-link" href="#politica">Política de Calidad</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#ubicacion">Ubicación</a>
@@ -96,7 +96,8 @@
         <img class="img-fluid" src="img/logo.jpg" alt="logo Coomutranstur">
       </div>
       <div class="col-sm-12 col-md-7 col-xl-8">
-        <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector de la economía
+        <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social, perteneciente al sector
+          de la economía
           solidaria, ubicado en el Consejo Comunitario de Comunidades Negras del corregimiento de Córdoba y San
           Cipriano de Buenaventura. Brindamos a través de convenios y alianzas estratégicas a los asociados y
           comunidad
@@ -111,7 +112,8 @@
       <div class="col">
         <h3 class="display-4 text-center">Visión</h3>
         <p class="text-justify">
-          La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del sector de economía
+          La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa del sector de
+          economía
           solidaria, que provea a
           los asociados y a sus familias desarrollo integral, al fortalecimiento del sector cooperativo y a la
           construcción del capital social en Colombia.
@@ -131,19 +133,21 @@
   </section>
 
   <section class="container" id="politica">
-    <div class="row pb-3 pt-3 text-center bg-light">
+    <div class="row pb-3 pt-3 align-items-center text-center bg-light">
       <div class="col-12">
-        <h5>POLÍTICA DE CALIDAD </h5>
+        <h5>POLÍTICA DE CALIDAD</h5>
       </div>
     </div>
     <div class="row justify-content-around mt-4">
-      <div class="col-10 text-center">
-        <p class="">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas de
-          nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.</p>
+      <div class="col text-center d-flex align-items-center">
+        <p class="">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas
+          de
+          nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
+        </p>
       </div>
-      <div class="w-100 mt-4"></div>
-      <div class="col-sm-6 col-md-4 col-xl-4 text-center">
-        <h5 class="bg-light pb-3 pt-3">Valores corporativos</h5>
+      <hr>
+      <div class="col text-center d-flex align-items-center mt-3">
+        <strong> Valores corporativos:</strong>
         <ul class="list-unstyled">
           <li>Ayuda mutua</li>
           <li>Responsabilidad</li>
@@ -196,7 +200,7 @@
           <div class="media d-flex align-items-center">
             <!-- Correo: -->
             <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
-            <div class="media-body d-inline">
+            <div class="media-body">
               www.coomutranstur@hotmail.com
             </div>
           </div>
