--- a/index.html
+++ b/index.html
@@ -133,20 +133,20 @@
   </section>
 
   <section class="container" id="politica">
-    <div class="row pb-3 pt-3 align-items-center text-center bg-light">
+    <div class="row pb-3 pt-3 align-items-center bg-light">
       <div class="col-12">
         <h5>POLÍTICA DE CALIDAD</h5>
       </div>
     </div>
     <div class="row justify-content-around mt-4">
-      <div class="col text-center d-flex align-items-center">
-        <p class="">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas
+      <div class="col d-flex align-items-center">
+        <p class="text-justify">Estamos mejorando continuamente nuestros servicios para satisfacer las necesidades y expectativas
           de
           nuestros asociados, sus familias y demás grupos de interés, generando creación de valor sostenible.
         </p>
       </div>
       <hr>
-      <div class="col text-center d-flex align-items-center mt-3">
+      <div class="col text-center d-flex align-items-center justify-content-center mt-3">
         <strong> Valores corporativos:</strong>
         <ul class="list-unstyled">
           <li>Ayuda mutua</li>
