--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
   <section class="container" id="politica">
     <div class="row pb-3 pt-3 align-items-center bg-light">
-      <div class="col-12">
+      <div class="col-12 text-center">
         <h5>POLÍTICA DE CALIDAD</h5>
       </div>
     </div>
