--- a/alianzas.html
+++ b/alianzas.html
@@ -33,14 +33,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html" id="link-servicios">Servicios <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Alianzas Estratégicas</a>
+                  <a class="nav-link active" href="#">Alianzas Estratégicas</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contáctenos</a>
