--- a/alianzas.html
+++ b/alianzas.html
@@ -8,7 +8,8 @@
   <title>COOMUSTRANSTUR</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Pruebas -->
@@ -63,13 +64,10 @@
             <div class="col">
               <div class="alianza-titulo">
                 <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
+                <hr>
               </div>
               Propietario: STELLA <br>
               Ubicación: San Cipriano
-
-            </div>
-            <div class="col">
-              <a href="">www.facebook.com/elbuengusto</a>
 
             </div>
             <div class="w-100"></div>
@@ -78,6 +76,9 @@
               <i class="fas fa-utensils fa-2x ml-2"></i>
               <i class="fas fa-concierge-bell fa-2x ml-2"></i>
               <i class="fas fa-glass-martini fa-2x ml-2"></i>
+            </div>
+            <div class="col">
+              <a href="">www.facebook.com/elbuengusto</a>
             </div>
 
           </div>
