--- a/alianzas.html
+++ b/alianzas.html
@@ -14,7 +14,8 @@
 
   <!-- Pruebas -->
 
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+  <link href="css/aos.css" rel="stylesheet">
   <!-- Pruebas -->
 
 </head>
@@ -91,7 +92,8 @@
 
 
 
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+  <script src="js/aos.js"></script>
   <script>
     AOS.init();
   </script>
@@ -101,7 +103,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/holder.js"></script>
   <!-- <script src="js/scrollreveal.min.js"></script> -->
-  <script src="js/app.js"></script>
+  <!-- <script src="js/app.js"></script> -->
 
 </body>
 
