--- a/alianzas.html
+++ b/alianzas.html
@@ -74,12 +74,13 @@
             <div class="w-100"></div>
             <div class="col">
               Servicios:
-              <i class="fas fa-utensils fa-2x ml-2"></i>
-              <i class="fas fa-concierge-bell fa-2x ml-2"></i>
-              <i class="fas fa-glass-martini fa-2x ml-2"></i>
+              <i class="au fas fa-utensils fa-2x ml-2"></i>
+              <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
+              <i class="au fas fa-glass-martini fa-2x ml-2"></i>
             </div>
-            <div class="col">
-              <a href="">www.facebook.com/elbuengusto</a>
+            <div class="w-100"></div>
+            <div class="col ">
+              <a class="float-right" href="#!">www.facebook.com/elbuengusto</a>
             </div>
 
           </div>
