--- a/alianzas.html
+++ b/alianzas.html
@@ -72,8 +72,8 @@
 
             </div>
             <div class="w-100"></div>
-            <div class="col">
-              Servicios:
+            <div class="col d-flex align-items-center">
+              <p></p>Servicios:</p>
               <i class="au fas fa-utensils fa-2x ml-2"></i>
               <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
               <i class="au fas fa-glass-martini fa-2x ml-2"></i>
