--- a/alianzas.html
+++ b/alianzas.html
@@ -53,36 +53,66 @@
   </section>
 
   <section>
-    <div class="container" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-      <div class="alianza row align-items-center">
+    <div class="container-fluid" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
 
-        <div class="col-sm-4 text-center">
-          <img src="holder.js/200x200">
-        </div>
-        <div class="col-sm-8">
-
-          <div class="row">
-            <div class="col">
-              <div class="alianza-titulo">
-                <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
-                <hr>
+      <div class="col-6">
+        <div class="alianza row align-items-center">
+          <div class="col-sm-4 text-center">
+            <img class="img-fluid" src="holder.js/200x200">
+          </div>
+          <div class="col-sm-8">
+            <div class="row">
+              <div class="col">
+                <div class="alianza-titulo">
+                  <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
+                  <hr>
+                </div>
+                Propietario: STELLA <br>
+                Ubicación: San Cipriano
               </div>
-              Propietario: STELLA <br>
-              Ubicación: San Cipriano
+              <div class="w-100"></div>
+              <div class="col d-flex align-items-center">
+                <p></p>Servicios:</p>
+                <i class="au fas fa-utensils fa-2x ml-2"></i>
+                <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
+                <i class="au fas fa-glass-martini fa-2x ml-2"></i>
+              </div>
+              <div class="w-100"></div>
+              <div class="col ">
+                <a class="float-right" href="#!">www.facebook.com/elbuengusto</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="col-6">
+        <div class="alianza row align-items-center">
+          <div class="col-sm-4 text-center">
+            <img class="img-fluid" src="holder.js/200x200">
+          </div>
+          <div class="col-sm-8">
+            <div class="row">
+              <div class="col">
+                <div class="alianza-titulo">
+                  <h5 class="text-center">Restaurante y Hotel El Buen Gusto</h5>
+                  <hr>
+                </div>
+                Propietario: STELLA <br>
+                Ubicación: San Cipriano
+              </div>
+              <div class="w-100"></div>
+              <div class="col d-flex align-items-center">
+                <p></p>Servicios:</p>
+                <i class="au fas fa-utensils fa-2x ml-2"></i>
+                <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
+                <i class="au fas fa-glass-martini fa-2x ml-2"></i>
+              </div>
+              <div class="w-100"></div>
+              <div class="col ">
+                <a class="float-right" href="#!">www.facebook.com/elbuengusto</a>
+              </div>
             </div>
-            <div class="w-100"></div>
-            <div class="col d-flex align-items-center">
-              <p></p>Servicios:</p>
-              <i class="au fas fa-utensils fa-2x ml-2"></i>
-              <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
-              <i class="au fas fa-glass-martini fa-2x ml-2"></i>
-            </div>
-            <div class="w-100"></div>
-            <div class="col ">
-              <a class="float-right" href="#!">www.facebook.com/elbuengusto</a>
-            </div>
-
           </div>
         </div>
       </div>
