--- a/alianzas.html
+++ b/alianzas.html
@@ -56,7 +56,7 @@
     <div class="container-fluid" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
 
       <div class="row">
-        <div class="col-6"> <!-- Div col -->
+        <div class="col-sm-12"> <!-- Div col -->
           <div class="alianza row align-items-center">
             <div class="col-sm-4 text-center">
               <img class="img-fluid" src="holder.js/200x200">
@@ -87,7 +87,7 @@
           </div>
         </div> <!-- fin Div col -->
 
-        <div class="col-6">
+        <div class="col-sm-12">
           <div class="alianza row align-items-center">
             <div class="col-sm-4 text-center">
               <img class="img-fluid" src="holder.js/200x200">
