--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
         <!-- <div class="w-100"></div> -->
         <div class="col-sm-6 col-md-12 col-lg-4">
           <span style="font-size: 3em;">
-            <a href="https://www.facebook.com/coomutranstur/"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/coomutranstur/"><i class="fab fa-instagram"></i></a>
-            <a href="https://twitter.com/coomutranstur"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.facebook.com/coomutranstur/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/coomutranstur/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/coomutranstur" target="_blank"><i class="fab fa-twitter-square"></i></a>
           </span>
         </div>
       </div>
