--- a/alianzas.html
+++ b/alianzas.html
@@ -17,9 +17,8 @@
   <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
   <link href="css/aos.css" rel="stylesheet">
 
-  <script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-  <script src='https://cdn.rawgit.com/Pagawa/PgwSlideshow/master/pgwslideshow.min.js'></script>
-  <link rel='stylesheet' href='https://cdn.rawgit.com/Pagawa/PgwSlideshow/master/pgwslideshow.min.css'>
+  <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+
   <!-- Pruebas -->
 
 </head>
@@ -146,16 +145,13 @@
           </div>
           <div class="modal-body">
 
-            <div class="slides">
-              <ul class="pgwSlideshow">
-                <li><img src="http://static.pgwjs.com/img/pg/slideshow/san-francisco.jpg" alt="San Francisco, USA"
-                    data-description="Golden Gate Bridge"></li>
-                <li><img src="http://static.pgwjs.com/img/pg/slideshow/rio.jpg" alt="Rio de Janeiro, Brazil"></li>
-                <li><a href="http://en.wikipedia.org/wiki/Monaco" target="_blank"><img src="http://static.pgwjs.com/img/pg/slideshow/monaco.jpg"
-                      alt="Monaco"></a></li>
-              </ul>
-
+            <div class="row">
+              <div class="col">
+                <a href="#" data-featherlight="img/p1.jpg">Open image in lightbox</a>
+              </div>
             </div>
+           
+            
 
 
           </div>
@@ -168,29 +164,24 @@
 
   </section>
 
-  <div class="slides">
-    <ul class="pgwSlideshow">
-      <li><img src="http://s1c.pagawatic.com/img/pgwjs/slideshow/san-francisco.jpg" alt="San Francisco, USA"
-          data-description="Golden Gate Bridge">
-      </li>
-      <li><img src="img/p1.jpg" alt="Rio de Janeiro, Brazil">
-      </li>
-      <li><img src="http://s1c.pagawatic.com/img/pgwjs/slideshow/london_mini.jpg" alt="" data-large-src="http://s1c.pagawatic.com/img/pgwjs/slideshow/london.jpg">
-      </li>
-      <li>
-        <a href="http://en.wikipedia.org/wiki/Monaco" target="_blank"><img src="http://s1c.pagawatic.com/img/pgwjs/slideshow/monaco.jpg"
-            alt="Monaco">
-        </a>
-      </li>
-    </ul>
-  </div>
+
 
 
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+  <script src="js/holder.js"></script>
   <script src="js/aos.js"></script>
+
+
+
+  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+
+
+
+
   <script>
     AOS.init();
 
@@ -203,7 +194,6 @@
 
 
   <!-- SCRIPTS -->
-  <script src="js/holder.js"></script>
   <!-- <script src="js/scrollreveal.min.js"></script> -->
   <!-- <script src="js/app.js"></script> -->
 
