--- a/alianzas.html
+++ b/alianzas.html
@@ -18,6 +18,8 @@
   <link href="css/aos.css" rel="stylesheet">
 
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+  <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
+
 
   <!-- Pruebas -->
 
@@ -63,7 +65,7 @@
           <!-- Div col -->
           <div class="alianza row align-items-center">
             <div class="col-sm-4 text-center">
-              <img class="img-fluid" src="holder.js/200x200">
+              <a href="img/p2.jpg" data-featherlight="image"><img class="img-fluid rounded-circle" src="img/p2.jpg"></a>
             </div>
             <div class="col-sm-8">
               <div class="row">
@@ -98,7 +100,7 @@
         <div class="col-sm-12 col-lg-6">
           <div class="alianza row align-items-center">
             <div class="col-sm-4 text-center">
-              <img class="img-fluid" src="holder.js/200x200">
+              <a href="img/p1.jpg" data-featherlight="image"><img class="img-fluid rounded-circle" src="img/p1.jpg"></a>
             </div>
             <div class="col-sm-8">
               <div class="row">
@@ -147,11 +149,17 @@
 
             <div class="row">
               <div class="col">
-                <a href="#" data-featherlight="img/p1.jpg">Open image in lightbox</a>
+
+                <section data-featherlight-gallery data-featherlight-filter="a">
+                  <h6>This is a gallery</h6>
+                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
+                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
+                </section>
+
               </div>
             </div>
-           
-            
+
+
 
 
           </div>
@@ -177,7 +185,11 @@
 
   <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
 
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+    charset="utf-8"></script>
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+    charset="utf-8"></script>
+
 
 
 
@@ -189,6 +201,16 @@
       $('.pgwSlideshow').pgwSlideshow({
         autoSlide: true
       });
+    });
+
+
+
+    $('a.gallery').featherlightGallery({
+      previousIcon: '«',
+      nextIcon: '»',
+      galleryFadeIn: 300,
+
+      openSpeed: 300
     });
   </script>
 
