--- a/alianzas.html
+++ b/alianzas.html
@@ -189,6 +189,7 @@
     charset="utf-8"></script>
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
     charset="utf-8"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/detect_swipe/2.1.1/jquery.detect_swipe.min.js"></script>
 
 
 
@@ -196,13 +197,6 @@
 
   <script>
     AOS.init();
-
-    $(document).ready(function () {
-      $('.pgwSlideshow').pgwSlideshow({
-        autoSlide: true
-      });
-    });
-
 
 
     $('a.gallery').featherlightGallery({
