--- a/alianzas.html
+++ b/alianzas.html
@@ -84,8 +84,9 @@
                   <i class="au fas fa-concierge-bell fa-2x ml-2"></i>
                   <i class="au fas fa-glass-martini fa-2x ml-2"></i>
                 </div>
+                <hr>
                 <div class="w-100"></div>
-                <div class="col ">
+                <div class="col mt-3 mb-3 d-flex align-items-center">
                   <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
                     Ver fotos
                   </button>
