--- a/alianzas.html
+++ b/alianzas.html
@@ -119,9 +119,15 @@
           <div class="modal-body">
 
             <div class="row">
-              <div class="col">
+              <div class="col d-flex justify-content-around">
 
                 <section data-featherlight-gallery data-featherlight-filter="a">
+                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
+                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
+                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
+                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
+                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
+                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
                   <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
                   <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
                 </section>
