--- a/alianzas.html
+++ b/alianzas.html
@@ -86,11 +86,9 @@
                 </div>
                 <hr>
                 <div class="w-100"></div>
-                <div class="col mt-3 mb-3 d-flex align-items-center">
-                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
-                    Ver fotos
-                  </button>
-                  <a class="float-right" href="#!">www.facebook.com/elbuengusto</a>
+                <div class="col mt-3 mb-3 text-center">
+                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">Ver fotos</button>
+                  <a class="" href="#!">www.facebook.com/elbuengusto</a>
                 </div>
               </div>
             </div>
@@ -119,15 +117,9 @@
           <div class="modal-body">
 
             <div class="row">
-              <div class="col d-flex justify-content-around">
+              <div class="col text-center">
 
                 <section data-featherlight-gallery data-featherlight-filter="a">
-                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
-                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
-                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
-                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
-                  <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
-                  <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
                   <a href="img/p3.jpg"><img class="img-fluid" src="img/p3.jpg"></a>
                   <a href="img/logo.jpg"><img class="img-fluid" src="img/logo.jpg"></a>
                 </section>
